--- a/eks.yaml
+++ b/eks.yaml
@@ -4,7 +4,7 @@ metadata:
   name: expense-1
   region: us-east-1
 
-manageNodeGroups:
+managedNodeGroups:
   - name: expense
     instanceType: m5.large
     desiredCapacity: 3
