--- a/eks.yaml
+++ b/eks.yaml
@@ -1,7 +1,7 @@
 apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 metadata:
-  name: expense-1
+  name: expense-New-1
   region: us-east-1
 
 managedNodeGroups:
