--- a/eks.yaml
+++ b/eks.yaml
@@ -1,11 +1,14 @@
 apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
+
 metadata:
-  name: expense-New-1
+  name: expense-east-1
   region: us-east-1
 
 managedNodeGroups:
-  - name: expense
-    instanceType: m5.large
-    desiredCapacity: 3
-    spot: true
+  - name: ng-1
+    instanceType: t3.micro
+    desiredCapacity: 1
+    minSize: 1
+    maxSize: 1
+    spot: false
