--- a/eks.yaml
+++ b/eks.yaml
@@ -2,13 +2,11 @@ apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 
 metadata:
-  name: expense-east-1
+  name: expense
   region: us-east-1
 
 managedNodeGroups:
-  - name: ng-1
-    instanceType: t3.micro
-    desiredCapacity: 1
-    minSize: 1
-    maxSize: 1
-    spot: false
+  - name: expense
+    instanceType: m5.large
+    desiredCapacity: 3
+    spot: true
